--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap");
+@font-face {
+  font-family: "ArialRound";
+  src: url(../fonts/ArialRoundedMTProCyr.otf); }
+
 * {
   margin: 0%;
   padding: 0%; }
@@ -21,6 +25,14 @@
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
+
+a {
+  text-decoration: none;
+  list-style: none;
+  font-family: "Roboto Slab";
+  color: #4e4e4e;
+  font-weight: bold;
+  font-size: 16px; }
 
 .menu {
   display: -webkit-box;
@@ -45,7 +57,7 @@
 .menu-li:not(.lit) {
   margin-right: 15px; }
 
-.menu-li:hover {
+.menu-li:hover a {
   color: #1abb9c; }
 
 .contain-too {
@@ -98,6 +110,7 @@
   margin: 0% auto; }
 
 .flex {
+  margin-top: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,11 +122,12 @@
   width: 23%;
   height: 300px; }
   .category .elipse {
+    position: relative;
+    left: 50%;
+    margin-left: -45px;
     width: 90px;
     height: 90px;
-    border-radius: 50%;
-    margin-top: 25%;
-    margin-left: 30%; }
+    border-radius: 50%; }
 
 .elipse-1 {
   background-color: #9d9abf; }
@@ -187,23 +201,29 @@
   height: 270px;
   background-size: cover; }
 
+a {
+  text-decoration: none; }
+
 .banners-h {
   font-family: "Roboto Slab";
   color: #4e4e4e;
   font-weight: bold;
-  font-size: 18px; }
+  font-size: 18px;
+  margin-top: 10px; }
 
 .banners-p1 {
   font-family: "Roboto Slab";
   color: #a8a8a8;
   font-weight: bold;
-  font-size: 13px; }
+  font-size: 13px;
+  margin-top: 5px; }
 
 .banners-p2 {
   font-family: "Roboto";
   color: #5c5c5c;
   font-weight: bold;
-  font-size: 14px; }
+  font-size: 14px;
+  margin-top: 15px; }
 
 .back2 {
   background-color: #e5e5e5; }
@@ -211,13 +231,14 @@
 .contain-five {
   width: 70%;
   margin: 0% auto;
-  height: 230px; }
+  height: 300px; }
 
 .block-kav {
-  font-family: Arial;
-  font-size: 100px;
+  font-family: "ArialRound";
+  font-size: 120px;
   text-align: center;
-  padding-top: 32px;
+  padding-top: 0px;
+  padding-bottom: 10px;
   color: #dcdcdc; }
 
 .block-txt {
@@ -255,7 +276,8 @@
   padding-top: 20px; }
 
 .last {
-  padding-bottom: 50px; }
+  margin-top: 100px;
+  padding-bottom: 80px; }
 
 .geo::before {
   font-family: FontAwesome;
@@ -278,11 +300,207 @@
   color: #a89574;
   padding-right: 9px; }
 
+.twit {
+  padding-left: 20px; }
+
 .twit::before {
   font-family: FontAwesome;
   content: "\f099";
   color: #a89574;
-  padding-right: 9px; }
+  display: inline-block;
+  margin-left: -17px; }
 
-.twit {
-  padding-left: 10px; }
+.latest {
+  position: relative;
+  top: 90px; }
+
+.latest-p {
+  font-family: "Roboto";
+  color: #4e4e4e;
+  font-weight: bold;
+  font-size: 18px; }
+
+.flex1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.flexx {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.menu-btn {
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-color: yellow;
+  border-radius: 50%;
+  position: relative;
+  display: none; }
+
+.btn-line,
+.btn-line::before,
+.btn-line::after {
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  left: 50%;
+  margin-left: -10px;
+  width: 20px;
+  height: 2px;
+  background-color: #222; }
+
+.btn-line::before,
+.btn-line::after {
+  content: "";
+  display: block;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s; }
+
+.btn-line::before {
+  -webkit-transform: translateY(-5px);
+  -ms-transform: translateY(-5px);
+  transform: translateY(-5px); }
+
+.btn-line::after {
+  -webkit-transform: translateY(5px);
+  -ms-transform: translateY(5px);
+  transform: translateY(5px); }
+
+.btn-line_active {
+  height: 0; }
+
+.btn-line_active::before {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.btn-line_active::after {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+
+@media screen and (max-width: 1200px) {
+  .button {
+    margin-left: 42%; } }
+
+@media screen and (max-width: 961px) {
+  .button {
+    margin-left: 40%; }
+  .flex {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .category {
+    width: 45%;
+    height: 300px; }
+    .category .elipse {
+      position: relative;
+      left: 50%;
+      margin-left: -45px;
+      width: 90px;
+      height: 90px;
+      border-radius: 50%; } }
+
+@media screen and (max-width: 874px) {
+  .flexx {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .banners {
+    width: 50%; }
+  .latest {
+    position: relative;
+    top: 0px;
+    left: 36%; }
+  .white-p {
+    top: 170px; }
+  .gray-p {
+    top: 190px; }
+  .button {
+    top: 200px; }
+  .flex1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .foot-block {
+    width: 70%;
+    height: 200px; }
+  .last {
+    margin-top: 40px; }
+  .line {
+    margin-bottom: 60px; }
+  .banners {
+    margin-top: 0px; } }
+
+@media screen and (max-width: 730px) {
+  .banners {
+    width: 70%; } }
+
+@media screen and (max-width: 600px) {
+  .banners {
+    width: 80%; }
+  .white-p {
+    top: 150px; }
+  .gray-p {
+    top: 170px; }
+  .button {
+    top: 180px;
+    margin-left: 36%; } }
+
+@media screen and (max-width: 480px) {
+  .white-p {
+    top: 130px; }
+  .gray-p {
+    top: 150px; }
+  .button {
+    top: 160px;
+    margin-left: 30%; }
+  .latest {
+    left: 25%; }
+  .flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .category {
+    width: 100%;
+    height: 230px; }
+  .back2 {
+    height: 380px; } }
+
+@media screen and (max-width: 462px) {
+  .foot-block {
+    height: 250px; } }
+
+@media screen and (max-width: 400px) {
+  .white-p {
+    top: 70px;
+    font-size: 36px; }
+  .gray-p {
+    top: 90px;
+    font-size: 30px; }
+  .button {
+    top: 100px;
+    margin-left: 25%; }
+  .banners {
+    width: 100%; } }
+
+@media screen and (max-width: 338px) {
+  .foot-block {
+    width: 70%;
+    height: 300px; }
+  .back2 {
+    width: 390px; } }
