--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,10 @@
-
 @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap');
 // font-family: 'Roboto'
 // font-family: 'Roboto Slab'
+@font-face {
+    font-family: "ArialRound";
+    src: url(../fonts/ArialRoundedMTProCyr.otf);
+}
 * {
     margin: 0%;
     padding: 0%;
@@ -33,6 +36,11 @@ $fontsize: 16px;
     align-items: center;
     justify-content: space-between;
 }
+a {
+    text-decoration: none;
+    list-style: none;
+    @include font($colorf,$fonts,$fontsize );
+}
 .menu {
     display: flex;
     flex-wrap: wrap;
@@ -48,7 +56,7 @@ $fontsize: 16px;
 .menu-li:not(.lit) {
     margin-right: 15px;
 }
-.menu-li:hover {
+.menu-li:hover a{
     color:#1abb9c;
 }
 .contain-too {
@@ -90,6 +98,7 @@ $fontsize: 16px;
     @include contain;
 }
 .flex {
+    margin-top: 50px;
     display: flex;
     justify-content: space-between;
 }
@@ -97,11 +106,11 @@ $fontsize: 16px;
     width: 23%;
     height: 300px;
     .elipse {
+        position: relative;
+        left:50%; margin-left: -45px;
         width: 90px;
         height: 90px;
         border-radius: 50%;
-        margin-top: 25%;
-        margin-left: 30%;
     }
 }
 .elipse-1 {
@@ -170,27 +179,33 @@ $fontsize: 16px;
     height: 270px;
     background-size: cover;
 }
+a {
+    text-decoration: none; }
 .banners-h {
     @include font($colorf:#4e4e4e,$fonts:"Roboto Slab",$fontsize:18px );
+    margin-top: 10px;
 }
 .banners-p1 {
-    @include font($colorf:#a8a8a8,$fonts:"Roboto Slab",$fontsize:13px )
+    @include font($colorf:#a8a8a8,$fonts:"Roboto Slab",$fontsize:13px );
+    margin-top: 5px;
 }
 .banners-p2 {
-    @include font($colorf:#5c5c5c,$fonts:"Roboto",$fontsize:14px )
+    @include font($colorf:#5c5c5c,$fonts:"Roboto",$fontsize:14px );
+    margin-top: 15px;
 }
 .back2 {
     background-color: #e5e5e5;
 }
 .contain-five {
     @include contain;
-    height: 230px;
+    height: 300px;
 }
 .block-kav {
-    font-family: Arial;
-    font-size: 100px;
+    font-family: "ArialRound";
+    font-size: 120px;
     text-align: center;
-    padding-top: 32px;
+    padding-top: 0px;
+    padding-bottom: 10px;
     color: #dcdcdc;
 }
 .block-txt {
@@ -218,7 +233,8 @@ $fontsize: 16px;
     padding-top: 20px;
 }
 .last {
-    padding-bottom: 50px;
+    margin-top: 100px;
+    padding-bottom: 80px;
 }
 .geo::before {
     font-family: FontAwesome;
@@ -241,12 +257,216 @@ $fontsize: 16px;
     color: #a89574;
     padding-right: 9px;
 }
+.twit {
+    padding-left: 20px;
+}
 .twit::before {
     font-family: FontAwesome;
     content: "\f099";
     color: #a89574;
-    padding-right: 9px;
+    display: inline-block;
+    margin-left: -17px;
 }
-.twit {
-    padding-left: 10px;
+.latest {
+    position: relative;
+    top: 90px;
+}
+.latest-p {
+    @include font($colorf:#4e4e4e,$fonts: "Roboto",$fontsize: 18px );
+}
+.flex1 {
+    display: flex;
+    justify-content: space-between;
+}
+.flexx {
+    display: flex;
+    justify-content: space-between;
+}
+.menu-btn {
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: yellow;
+    border-radius: 50%;
+    position: relative;
+    display: none;
+}
+.btn-line,
+.btn-line::before,
+.btn-line::after {
+    position: absolute;
+    top: 50%;
+    margin-top: -1px;
+    left: 50%;
+    margin-left: -10px;
+    width: 20px;
+    height: 2px;
+    background-color: #222;
+}
+.btn-line::before,
+.btn-line::after{
+   content: "";
+   display: block;
+   transition: 0.2s;
+}
+.btn-line::before {
+    transform: translateY(-5px);
+}
+.btn-line::after {
+    transform: translateY(5px);
+}
+.btn-line_active{
+    height: 0;
+}
+.btn-line_active::before{
+    transform: rotate(45deg);
+}
+.btn-line_active::after{
+    transform: rotate(-45deg);
+}
+
+@media screen and (max-width:1200px) {
+    .button {
+        margin-left: 42%;
+    }
+}
+@media screen and (max-width:961px) {
+    .button {
+        margin-left: 40%;
+    }
+    .flex {
+        flex-wrap: wrap;
+    }
+    .category {
+        width: 45%;
+        height: 300px;
+        .elipse {
+            position: relative;
+            left:50%; margin-left: -45px;
+            width: 90px;
+            height: 90px;
+            border-radius: 50%;
+        }
+    }
+}
+
+@media screen and (max-width: 930px) {
+    
+    
+}
+@media screen and (max-width: 874px) {
+    .flexx {
+        flex-direction: column;
+        align-items: center;
+    }
+    .banners{
+        width: 50%;
+    }
+    .latest {
+        position: relative;
+        top: 0px;
+        left: 36%
+    }
+    .white-p {
+        top: 170px
+    }
+    .gray-p {
+        top: 190px;
+    }
+    .button {
+        top: 200px;
+    }
+    .flex1 {
+        flex-direction: column;
+    }
+    .foot-block {
+        width: 70%;
+        height: 200px;
+    }
+    .last {
+        margin-top: 40px;
+    }
+    .line {
+        margin-bottom: 60px;
+    }
+    .banners {
+        margin-top: 0px;
+    }
+}
+@media screen and (max-width: 730px) {
+    .banners{
+        width: 70%;
+    }
+}
+@media screen and (max-width: 600px) {
+    .banners {
+        width: 80%;
+    }
+    .white-p {
+        top: 150px
+    }
+    .gray-p {
+        top: 170px;
+    }
+    .button {
+        top: 180px;
+        margin-left: 36%;
+    }
+}
+@media screen and (max-width: 480px) {
+    .white-p {
+        top: 130px
+    }
+    .gray-p {
+        top: 150px;
+    }
+    .button {
+        top: 160px;
+        margin-left: 30%;
+    }
+    .latest {
+        left: 25%;
+    }
+    .flex {
+        flex-direction: column;
+    
+    }
+    .category{
+        width: 100%;
+        height: 230px;
+    }
+    .back2 {
+        height: 380px;
+    }
+}
+@media screen and (max-width: 462px) {
+    .foot-block {
+        height: 250px;
+    }
+}
+@media screen and (max-width: 400px) {
+    .white-p {
+        top: 70px;
+        font-size: 36px;
+    }
+    .gray-p {
+        top: 90px;
+        font-size: 30px;
+    }
+    .button {
+        top: 100px;
+        margin-left: 25%;
+    }
+    .banners{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 338px) {
+    .foot-block {
+        width: 70%;
+        height: 300px;
+    }
+    .back2 {
+        width: 390px;
+    }
 }
